--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 	<label for="email"> Email: </label>
 	<input type="email" id="email" name="email" required><br><br>
 
-	<label for="gender"> Gender:</label>
+	<label> Gender:</label>
 	<label for="male"> Male</label>
 	<input type="radio" id="male" name="male" required>
 	<lable for="female">female</lable>
