--- a/main.html
+++ b/main.html
@@ -18,10 +18,10 @@
 	<input type="email" id="email" name="email" required><br><br>
 
 	<label> Gender:</label>
-	<label for="male"> Male</label>
-	<input type="radio" id="male" name="male" required>
-	<lable for="female">female</lable>
-	<input type="radio" id="female" name="female" required><br><br>
+	<label for="gender"> Male</label>
+	<input type="radio" id="gender" name="male" required>
+	<lable for="gender">female</lable>
+	<input type="radio" id="gender" name="female" required><br><br>
 
 	<label for="cars"> Car Brand : </label>
 	<select id="cars" name="cars" >
