--- a/main.html
+++ b/main.html
@@ -16,13 +16,13 @@
 
 	<label for="email"> Email: </label>
 	<input type="email" id="email" name="email" required><br><br>
-
-	<label> Gender:</label>
-	<label for="gender"> Male</label>
-	<input type="radio" id="gender" name="male" required>
-	<lable for="gender">female</lable>
-	<input type="radio" id="gender" name="female" required><br><br>
-
+		
+  <label>Gender:</label><br>
+  <input type="radio" id="male" name="gender" required>
+  <label for="male">Male</label>
+  <input type="radio" id="female" name="gender" required>
+  <label for="female">Female</label><br><br>
+	
 	<label for="cars"> Car Brand : </label>
 	<select id="cars" name="cars" >
 		<option value="BMW"> BMW </option>
